--- a/lujnet/pom.xml
+++ b/lujnet/pom.xml
@@ -6,25 +6,30 @@
   <parent>
     <groupId>luj.parent</groupId>
     <artifactId>lujparent</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <version>2.0.0-SNAPSHOT</version>
   </parent>
 
   <groupId>luj.net</groupId>
   <artifactId>lujnet</artifactId>
-  <version>0.1-SNAPSHOT</version>
+  <version>2.0.0-SNAPSHOT</version>
 
   <dependencies>
     <dependency>
       <groupId>luj.ava</groupId>
       <artifactId>lujava</artifactId>
-      <version>0.1-SNAPSHOT</version>
+      <version>2.0.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>luj.spring</groupId>
+      <artifactId>lujspring</artifactId>
+      <version>2.0.0-SNAPSHOT</version>
     </dependency>
 
     <!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
     <dependency>
       <groupId>io.netty</groupId>
       <artifactId>netty-all</artifactId>
-      <version>4.1.74.Final</version>
+      <version>4.1.79.Final</version>
     </dependency>
   </dependencies>
 </project>
